DeepDiveToK8s/Services/kubia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc
  labels:
    app: kubia
    env: dev
spec:
  selector:
    app: frontend
  ports:
  - name:  http
    port:  80
    targetPort: 8080
