DeepDiveToK8s/Services/kubia-svc-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 80
      nodePort: 30000
  selector:
    app: kubia-node
